css/main.css
/*font-family: 'Lato', sans-serif;
font-family: 'Poppins', sans-serif;
D8E2DC
FFE5D9
FFCAD4
E5989B
B5838D
#A16369
6D6875
#66606C
*/

/* HEADER */
.header-wrapper {
    margin-left: 100px;
    margin-right: 100px;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 32px;
}

.t-hidden {
    padding: 0;
    width: 1px;
    height: 1px;
    position: absolute;
    clip: rect(1px,1px,1px,1px);
    -webkit-clip-path: inset(0 0 99.9% 99.9%);
    clip-path: inset(0 0 99.9% 99.9%);
    overflow: hidden;
    white-space: nowrap;
    border: 0;
}

.nav-bar {
    display: flex;
    gap: 70px;
}

.nav-bar a {
    font-family: 'Lato', sans-serif;
    font-size: 18px;
    text-decoration: none;
    color: #66606C;
    transition: all ease .25s;
}

.nav-bar a:hover {
    color: #E5989B;
}

/* BODY */
body{
    background-color: #D8E2DC;
}

img {
    width: 100%;
    height: auto;
}

h1, h2, p, a {
    font-family: 'Poppins', sans-serif;
}

/* FOOTER */

.footer-wrapper {
    margin: 0;
    padding: 40px 0;
    background-color: white;
}

.contact-footer {
    text-align: center;
    padding-bottom: 25px;
    color: #A16369;
}

.contact-footer a {
    font-size: 24px;
    color: #A16369;
    border-width: 2px;
    border-color: black;
    border-style: soild;
    width: 40px;
    height: 40px;
    line-height: 38px;
    text-align: center;
    display: inline-block;
    border-radius: 50%;
    margin: 0 8px;
    opacity: .75;
}

.contact-footer a:hover{
    opacity: 1;
}

.page-list-footer {
    list-style: none;
    font-size: 18px;
    line-height: 1.6;
    text-align: center;
}

.page-list-footer li {
    text-align: center;
    display: inline-block;
    padding: 0 15px;
}

.page-list-footer li a {
    color: #A16369;
    text-decoration: none;
    opacity: .8; 
}

.page-list-footer li a:hover {
    opacity: 1;
}

.copyright-footer {
    text-align: center;
    margin-top: 15px;
    font-size: 13px;
    color: #A16369;
}

/* ABOUT PAGE */

.about-text{
    display: flex;
    padding: 40px;
}

.about-text-tiles{
    display: flex;
    justify-content: center;
    gap: 100px;
    padding: 20px;
    border-radius: 12px;
    text-align: center;
}

.about-text-tile img {
    max-width: 400px;
}

/* ABOUT LINKS */
.about-text-tile a:link {
    color: #66606C;
}
  
.about-text-tile a:visited {
    color: #B5838D;
}
  
.about-text-tile a:hover {
    color: #E5989B;
}

/* PROJECTS */

.val-row-3 img {
    width: auto;
    height: auto;
}

.val-row-3-tiles {
    display: flex;
    justify-content: center;
    gap: 50px;
    padding: 20px;
    border-radius: 12px;
    text-align: center;
  }
  
  .val-row-3-tile img {
    padding: 20px;
  }

/* MEDIA QUERY FOR PHONE */
@media only screen and (max-width: 500px) {
    .header {
        flex-direction: column;
    }

    .header-wrapper {
        margin-left: 0px;
        margin-right: 0px;

    }

    .about-text-tiles{
        flex-direction: column;
        gap: 60px;
    }

    .nav-bar {
        gap: 10px;
        align-self: flex-start;
    }
}  

